# sparse-qubo

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
docs/: examples.md  getting-started.md  index.md  modules.md  usage.md
examples/: common.py  index.html  shit_scheduling.ipynb
examples/shift_scheduling/: benchmark.py  demo.ipynb  problem.py
examples/tsp/: benchmark.py  problem.py
getting-started/: index.html
modules/: index.html
search/: search_index.json
src/sparse_qubo/: __init__.py  permutation_channel.py
src/sparse_qubo/core/: base_network.py  constraint.py  network.py  node.py  permutation_channel.py  switch.py
src/sparse_qubo/dwave/: constraint.py
src/sparse_qubo/fixstars-amplify/: constraint.py
src/sparse_qubo/fixstars_amplify/: __init__.py  constraint.py
src/sparse_qubo/networks/: benes_network.py  bitonic_sort_network.py  bubble_sort_network.py  clique_network.py  clos_network_base.py  clos_network_max_degree.py  clos_network_minimum_edge.py  divide_and_conquer_network.py  oddeven_merge_sort_network.py
tests/: test_core_base_network.py  test_core_constraint.py  test_core_network.py  test_core_node.py  test_core_permutation_channel.py  test_dwave_constraint.py  test_foo.py  test_networks_benes.py  test_networks_bitonic_sort.py  test_networks_bubble_sort.py  test_networks_clique.py  test_networks_clos_network_max_degree.py  test_networks_clos_network_minimum_edge.py  test_networks_divide_and_conquer.py  test_networks_oddeven_merge_sort.py
usage/: index.html
