[project]
name = "sparse-qubo"
version = "0.0.1"
description = "Sparse QUBO formulation for efficient embedding on hardware."
authors = [{ name = "Kohei Suda", email = "sudakohei201@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "amplify>=1.4.1",
    "dimod>=0.12.21",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://KoheiSuda.github.io/sparse-qubo/"
Repository = "https://github.com/KoheiSuda/sparse-qubo"
Documentation = "https://KoheiSuda.github.io/sparse-qubo/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.0",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "mypy>=1.19.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "types-networkx>=3.6.1.20251220",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "dwave-cloud-client>=0.14.4",
    "dwave-ocean-sdk>=9.3.0",
    "pandas-stubs>=2.3.3.260113",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparse_qubo"]

[tool.mypy]
files = ["src"]
exclude = ["^examples/"]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = ["^examples/"]


[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # AvoidLongMessagesOutsideExceptionClass
    "TRY003",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
